grammars/tree-sitter-oberon2/grammar.js
    module: $ => choice(
      seq(
        $.module_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.procedure_decls),
        optional(seq(
          $.kBegin,
          optional($.statement_seq)
        )),
        $.module_footer
      ),
      seq(
        $.definition_header,
        optional($.import_list),
        optional($.const_decls),
        optional($.type_decls),
        optional($.variable_decls),
        repeat($.definition_proc_decl),
        $.module_footer
      )
    ),
    module_header: $ => seq($.kModule, $.ident, ';'),
    module_footer: $ => seq($.kEnd, $.ident, '.'),

    // definition_proc_decl = procedure_heading ";"
    type_decls: $=> seq(
      $.kType, 
      repeat(seq(
        $.type_decl, ';'
      ))
    ),

    // variable_decls =["VAR" {variable_decl ";"}]
    variable_decls: $ => seq(
      $.kVar, 
      repeat(seq(
        $.variable_decl, ';'
      ))
    ),

    // procedure_decls = (procedure_decl | forward_decl) ";"
    procedure_decls: $ => seq(
      choice($.procedure_decl, $.forward_decl), ';'
    ),

    // const_decl = ident_def "=" const_expresion
    const_expression: $ =>  $.expression,

    // type_decl = ident_def "=" (qualident | struct_type)
    type_decl: $ => seq(
      $.ident_def, '=', $.type
    ),

    // struct_type = array_type | record_type | pointer_type | procedure_type
    struct_type: $ => choice(
      $.array_type,
      $.record_type,
      $.pointer_type,
      $.procedure_type
    ),

    // array_type = "ARRAY" length {"," length} "OF" type
    array_type: $ => seq(
      $.kArray, $.length, repeat(seq(',', $.length)), $.kOf, $.type
    ),

    // length = const_expression
    length: $ => $.const_expression,

    // record_type = "RECORD" ["(" base_type ")"] [field_list_seq] "END"
    record_type: $ => seq(
      $.kRecord,
      optional(seq(
        '(',
        $.base_type,
        ')'
      )),
      optional($.field_list_seq),
      $.kEnd
    ),

    // base_type = qualident
    field_list_seq: $ => choice(
      seq($.field_list, repeat(seq(';', optional($.field_list)))),
      repeat1(seq(';', optional($.field_list)))
    ),

    // field_list = [ident_list ":" type]
    field_list: $ => seq(
      $.ident_list, ':', $.type
    ),

    // ident_list = ident_def {"," ident_def}
    ident_list: $ => seq(
      $.ident_def, repeat(seq(',', $.ident_def))
    ),

    // pointer_type = "POINTER" "TO" type
    procedure_type: $ => seq(
      $.kProcedure, optional($.formal_params)
    ),

    // formal_params = "(" [fp_section {";" fp_section}] ")" [":" qualident]
    formal_params: $ => seq(
      "(",
      optional(seq(
        $.fp_section, repeat(seq(';', $.fp_section))
      )),
      ")",
      optional(seq(
        ':', $.qualident
      ))
    ),

    // fp_section = ["VAR"] ident {"," ident} ":" formal_type
    fp_section: $ => seq(
      optional($.kVar),
      $.ident, repeat(seq(',', $.ident)),
      ':',
      $.formal_type
    ),

    // formal_type = {"ARRAY" "OF"} (qualident | procedure_type)
    // The report's FPSection uses full Type (Qualident | ARRAY OF Type | RECORD... |
    // POINTER TO Type | PROCEDURE [FormalPars]); this grammar's formal_type has always been
    // narrower than that. Widened only for the case the corpus actually uses — a PROCEDURE
    // type as a callback parameter (voc's MultiArrays.Mod) — not the full Type recursion.
    formal_type: $ => seq(
      repeat(seq($.kArray, $.kOf)),
      choice($.qualident, $.procedure_type)
    ),

    // qualident = [ident "."] ident
    qualident: $ => prec.left(choice(
      seq($.ident),
      seq(field("qualifier", $.ident), '.', field("property", $.ident)),
    )),

    // ident_def = ident ["*" | "-"]
    ident_def: $ => seq(
      $.ident, optional(choice($.kStar, $.kMinus))
    ),

    // variable_decl = ident_list ":" type
    variable_decl: $ => seq(
      $.ident_list, ':', $.type
    ),

    // type = qualident | struct_type
    type: $ => choice(
      $.qualident,
      $.struct_type
    ),

    // procedure_decl = procedure_heading ";" procedure_body ident
    procedure_decl: $ => seq(
      $.procedure_heading, ';', $.procedure_body, $.ident
    ),

    // procedure_heading = "PROCEDURE" [receiver] ident_def [formal_params]
    procedure_heading: $ => seq(
      $.kProcedure, optional($.receiver), $.ident_def, optional($.formal_params)
    ),

    // receiver = "(" ["VAR"] ident ":" ident ")"
    procedure_body: $ => seq(
      //$.declaration_seq,
      optional($.const_decls),
      optional($.type_decls),
      optional($.variable_decls),
      repeat($.procedure_decls),
      optional(seq($.kBegin, optional($.statement_seq))),
      $.kEnd
    ),

    // expression = simple_expression [relation simple_expression]
    expression: $ => seq(
      $.simple_expression,
      optional(seq($.relation, $.simple_expression))
    ),

    // relation = "=" | "#" | "<" | "<=" | ">" | ">=" | "IN" | "IS"
    relation: $ => choice(
      '=',
      '#',
      '<',
      '<=',
      '>',
      '>=',
      $.kIn,
      $.kIs
    ),

    // simple_expression = ["+" | "-"] term {add_operator term}
    simple_expression: $ => seq(
      optional(choice(
        $.kPlus,
        $.kMinus
      )),
      $.term,
      repeat(seq(
        $.add_operator, $.term
      ))
    ),

    // add_operator = "+" | "-" | "OR"
    add_operator: $ => choice(
      $.kPlus,
      $.kMinus,
      $.kOr
    ),

    // term = factor {mul_operator factor}
    term: $ => seq(
      $.factor, repeat(seq($.mul_operator, $.factor))
    ),

    // mul_operator = "*" | "/" | "DIV" | "MOD" | "&"
    factor: $ => choice(
      $.number,
      $.string,
      $.kNil,
      $.kTrue,
      $.kFalse,
      $.set,
      seq($.designator, optional($.actual_params)),
      seq('(', $.expression, ')'),
      seq('~', $.factor)
    ),

    // designator = qualident {selector}
    designator: $ => prec.left(seq(
      $.qualident,
      repeat($.selector)
    )),

    // selector = "." ident | "[" expression_list "]" | "^" | "(" qualident ")"
    selector: $ => choice(
      seq('.', $.ident),
      seq('[', $.expression_list, ']'),
      '^',
      seq('(', $.qualident, ')')
    ),

    // set = "{" [element {"," element}] "}"
    expression_list: $ => seq(
      $.expression, repeat(seq(',', $.expression))
    ),

    // actual_params = "(" [expression_list] ")"
    actual_params: $ => seq(
      '(', optional($.expression_list), ')'
    ),

    // statement = assignment | procedure_call | if_statement | case_statement |
    //              while_statement | repeat_statement | for_statement |
    //              loop_statement | with_statement | exit_statement |
    //              return_statement
    statement: $ => choice(
      $.assignment,
      $.procedure_call,
      $.if_statement,
      $.case_statement,
      $.while_statement,
      $.repeat_statement,
      $.for_statement,
      $.loop_statement,
      $.with_statement,
      $.exit_statement,
      $.return_statement
    ),

    // assignment = designator ":=" expression
    assignment: $ => seq(
      $.designator, ':=', $.expression
    ),

    // procedure_call = designator [actual_params]
    procedure_call: $ => seq(
      $.designator, optional($.actual_params)
    ),

    // statement_seq = statement {";" statement}
    // Statement is itself optional in the EBNF ([...]), so every element of
    // the sequence may be empty — an empty statement isn't a kind of
    // statement, it's the absence of one, so it isn't its own node kind.
    // (statement_seq itself must still consume at least one token — a
    // wholly empty sequence is expressed by omitting it at the call site,
    // e.g. `optional($.statement_seq)` — tree-sitter rejects any rule that
    // can match the empty string.)
    statement_seq: $ => choice(
      seq($.statement, repeat(seq(';', optional($.statement)))),
      repeat1(seq(';', optional($.statement)))
    ),

    // if_statement = "IF" expression "THEN" statement_seq
    //                {"ELSIF" expression "THEN" statement_seq}
    //                ["ELSE" statement_seq] "END"
    if_statement: $ => seq(
      $.kIf, $.expression, $.kThen, optional($.statement_seq),
      repeat(seq($.kElseif, $.expression, $.kThen, optional($.statement_seq))),
      optional(seq($.kElse, optional($.statement_seq))),
      $.kEnd
    ),

    // case_statement = "CASE" expression "OF" case {"|" case} "END"
    case_statement: $ => seq(
      $.kCase, $.expression, $.kOf, optional($.case_clause), repeat(seq('|', optional($.case_clause))), $.kEnd
    ),

    // case = [case_label_list ":" statement_sequence]
    case_clause: $ => seq($.case_label_list, ':', optional($.statement_seq)),

    // case_label_list = label_range {"," label_range}
    case_label_list: $ => seq(
      $.label_range,
      repeat(seq(',', $.label_range))
    ),

    // label_range = label [".." label]
    label_range: $ => seq(
      $.label, optional(seq('..', $.label))
    ),

    // label = integer | string | qualident
    label: $ => choice(
      $.integer,
      $.string,
      $.qualident
    ),

    // while_statement = "WHILE" expression "DO" statement_sequence
    //                   {"ELSIF" expression "DO" statement_sequence} "END"
    loop_statement: $ => seq(
      $.kLoop, optional($.statement_seq), $.kEnd
    ),

    // exit_statement = "EXIT"
    exit_statement: $ => $.kExit,

    // return_statement = "RETURN" [expression]
    return_statement: $ => seq(
      $.kReturn, optional($.expression)
    ),

    // with_statement = "WITH" guard "DO" statement_seq
    //                  {"|" guard "DO" statement_seq}
    //                  ["ELSE" statement_seq] "END"
    with_statement: $ => seq(
      $.kWith, $.with_arm, repeat(seq('|', $.with_arm)),
      optional(seq($.kElse, optional($.statement_seq))),
      $.kEnd
    ),

    with_arm: $ => seq(
      $.guard, $.kDo, optional($.statement_seq)
    ),

    // guard = qualident ":" qualident
    guard: $ => seq(
      $.qualident, ':', $.qualident
    ),

    number: $ => choice($.integer, token(real)),

    // integer = digit {digit} | digit {hex_digit} "H"
    integer: $ => choice(
      token(seq(digit, repeat(digit))),
      token(seq(hex_digit, 'H'))
    ),
    
    // mathematical operators
    kPlus:  $ => '+',
    kDo: $ => 'DO',
    kIf: $ => 'IF',
    kIs: $ => 'IS',
    kOf: $ => 'OF',
    kEnd: $ => 'END',
    kVar: $ => 'VAR',
    kExit: $ => 'EXIT',
    kLoop: $ => 'LOOP',
    kWith: $ => 'WITH',

    kCase: $ => 'CASE',
    kElse: $ => 'ELSE',
    kThen: $ => 'THEN',
    kType: $ => 'TYPE',

    kArray: $ => 'ARRAY',
    kBegin: $ => 'BEGIN',
    kModule: $ => 'MODULE',
    kRecord: $ => 'RECORD',
    kReturn: $ => 'RETURN',

    kProcedure: $ => 'PROCEDURE',

    ident: $ => token(identifier),
